Refactor Error IO and add more test

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -98,6 +98,7 @@ rewrite {
     stringInterpolation = true
     methodBodies = false
     includeUnitMethods = false
+    maxLines = 1
   }
   sortModifiers.order = [
     "implicit", "lazy", "final", "sealed",
